Writing the html elements for the sidebar, header and main content containr

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     </div>
                     <div class="money-maker">
                         <h3>Money Maker</h3>
-                        <p>Grid CSS is an essential tool for modern web development, embraced for its intuitive syntax, extensive features, and optimal user experiences across devices.</p>
+                        <p>Grid CSS is an Essential tool for modern web development, embraced for its intuitive syntax, extensive features, and optimal user experiences across devices.</p>
                     </div>
                 </div>
             </div>
