--- a/index.html
+++ b/index.html
@@ -99,26 +99,57 @@
                         <div class="cards" class="super-cool">
                             <h3>Super Cool Project</h3>
                             <p>Grid CSS revolutionized web design, enabling responsive layouts with ease. It simplifies alignment and adaptability across devices, delivering consistent user experiences.</p>
+                            <div class="picons">
+                                <a href="#"><img width="20" height="20" src="https://img.icons8.com/windows/32/star--v1.png" alt="star--v1"/></a>
+                                <a href="#"><img width="20" height="20" src="https://img.icons8.com/ios-glyphs/30/visible--v1.png" alt="visible--v1"/></a>
+                                <a href="#"><img width="20" height="20" src="https://img.icons8.com/ios-glyphs/30/add-link.png" alt="add-link"/></a>
+                            </div>
                         </div>
                         <div class="cards" class="less-cool">
                             <h3>Less Cool Project</h3>
                             <p>Grid CSS handles complex layouts effortlessly, allowing designers to bring creative visions to life, whether it's magazines, mosaics, or product grids.</p>
+                            <div class="picons">
+                                <a href="#"><img width="20" height="20" src="https://img.icons8.com/windows/32/star--v1.png" alt="star--v1"/></a>
+                                <a href="#"><img width="20" height="20" src="https://img.icons8.com/ios-glyphs/30/visible--v1.png" alt="visible--v1"/></a>
+                                <a href="#"><img width="20" height="20" src="https://img.icons8.com/ios-glyphs/30/add-link.png" alt="add-link"/></a>
+                            </div>
                         </div>
                         <div class="cards" class="impossible-app">
                             <h3>Impossible App</h3>
                             <p>With versatile features like track sizing, grid gaps, and auto-placement, Grid CSS offers customization and fluid content reordering.</p>
+                            <div class="picons">
+                                <a href="#"><img width="20" height="20" src="https://img.icons8.com/windows/32/star--v1.png" alt="star--v1"/></a>
+                                <a href="#"><img width="20" height="20" src="https://img.icons8.com/ios-glyphs/30/visible--v1.png" alt="visible--v1"/></a>
+                                <a href="#"><img width="20" height="20" src="https://img.icons8.com/ios-glyphs/30/add-link.png" alt="add-link"/></a>
+                            </div>
                         </div>
+
                         <div class="cards" class="easy-app">
                             <h3>Easy Peasy App</h3>
                             <p>Grid CSS accommodates both 2D and 1D layouts, expanding design possibilities and enabling dynamic arrangements.</p>
+                            <div class="picons">
+                                <a href="#"><img width="20" height="20" src="https://img.icons8.com/windows/32/star--v1.png" alt="star--v1"/></a>
+                                <a href="#"><img width="20" height="20" src="https://img.icons8.com/ios-glyphs/30/visible--v1.png" alt="visible--v1"/></a>
+                                <a href="#"><img width="20" height="20" src="https://img.icons8.com/ios-glyphs/30/add-link.png" alt="add-link"/></a>
+                            </div>
                         </div>
                         <div class="cards" class="ad-blocker">
                             <h3>Ad Blocker</h3>
                             <p>Creating responsive designs is simplified with Grid CSS, aligning and positioning elements using media queries for seamless adaptation.</p>
+                            <div class="picons">
+                                <a href="#"><img width="20" height="20" src="https://img.icons8.com/windows/32/star--v1.png" alt="star--v1"/></a>
+                                <a href="#"><img width="20" height="20" src="https://img.icons8.com/ios-glyphs/30/visible--v1.png" alt="visible--v1"/></a>
+                                <a href="#"><img width="20" height="20" src="https://img.icons8.com/ios-glyphs/30/add-link.png" alt="add-link"/></a>
+                            </div>
                         </div>
                         <div class="cards" class="money-maker">
                             <h3>Money Maker</h3>
                             <p>Grid CSS is an Essential tool for modern web development, embraced for its intuitive syntax, extensive features, and optimal user experiences across devices.</p>
+                            <div class="picons">
+                                <a href="#"><img width="20" height="20" src="https://img.icons8.com/windows/32/star--v1.png" alt="star--v1"/></a>
+                                <a href="#"><img width="20" height="20" src="https://img.icons8.com/ios-glyphs/30/visible--v1.png" alt="visible--v1"/></a>
+                                <a href="#"><img width="20" height="20" src="https://img.icons8.com/ios-glyphs/30/add-link.png" alt="add-link"/></a>
+                            </div>
                         </div>
 
                 </div>
